--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-remark": "^2.3.7",
     "gatsby-transformer-sharp": "^2.1.17",
+    "node-fetch": "^2.6.1",
     "prismjs": "^1.23.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
