--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,7 +2,7 @@ name: gh-pages
 on:
   push:
     branches:
-      - hugo
+      - main
 jobs:
   gh-pages:
     runs-on: ubuntu-latest
@@ -19,7 +19,7 @@ jobs:
         run: hugo --minify
       - name: gh-pages
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/hugo'
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
